# IntercomClientPython

./: .envrc  .pre-commit-config.yaml  .token-file.json  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  VERSION  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: build-deb.yml  build-docker.yml  build.yml  deploy.yml  tests.yml
intercomclient/: aws.py  camera_video_stream_track.py  config.py  device.py  device_authorization.py  local_store.py  telemetry.py  timeline.py  token_store.py  turn.py  video_capture.py  video_pipeline.py
splintercomclient/: camera_video_stream_track.py  config.py  device.py  device_authorization.py  host_metrics.py  otel.py  token_store.py
tests/: conftest.py
tests/integration/: client.py
tests/integration/intercomclient/: test_aws.py  test_video_pipeline.py
tests/unittests/: test_config.py  test_device.py  test_device_authorization.py  test_pi_client.py  test_token_store.py
