[project]
name = "intercomclientpython"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiortc>=1.14.0",
    "boto3>=1.42.39",
    "cryptography>=46.0.7",
    "idna==3.15",
    "jsonschema>=4.26.0",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pip==26.1",
    "pre-commit>=4.5.1",
    "pygments>=2.20.0",
    "pyopenssl>=26.0.0",
    "pytest>=9.0.3",
    "requests>=2.33.0",
    "ruff>=0.14.14",
    "transparenc-sdk",
    "urllib3>=2.7.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-watch>=4.2.0",
]

[tool.uv.sources]
transparenc-sdk = { url = "https://github.com/kieranmanning/IntercomClientSDKs/releases/download/v0.9/transparenc_sdk-1.0.0-py3-none-any.whl" }

[tool.ruff]
lint.extend-select = ["I"] 
